Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.56:
	* German translation update (Thanks Karsten Weiss)
	* Shell-like send history binded to Ctrl-Up and Ctrl-Down
	* Russian Translation Updated (thanks Grigory Bakunov)
	* libjabber upgraded to most recent stable version
	* Buddylist looks a little better
	* Fixed MSN privacy settings
	* Group deletion fix
	
version 0.55 (03/29/2002):
	* Jabber improvements (Thanks Jim Seymour)
	* Various sound cleanups (Thanks Robert McQueen)
	* Login process shown in single window (Thanks Michael 
	  Golden)
	* Can reorder your accounts in the account editor (Thanks
	  Luke Schierer)
	* Updated Dutch translation
	* Shows "mobile" icon for Oscar buddies using mobile
	  devices (Thanks Mark Doliner)
	* Updated Polish Translation (Thanks Przemyslaw Sulek)
	* Fixed bug in MSN smilies that crashed PPC (and other?) platforms
	* Updated Spanish Translation (Thanks Amaya)
	* Updated French translation
	* Updated Finnish translation (Thanks Tero Kuusela)
	* HTTP Proxy settings now HTTP compliant (Thanks Robert McQueen)	
	* Speling corections (Thanks Tero Kuusela)
	* Oscar list icon fixes (Thanks Mark Doliner)
	* Oscar idle times work again (Thanks Mark Doliner)
	* Protocol icons on Edit Buddies tab (Thanks Christian Hammond)	

version 0.54 (03/14/2002):
	* Compiles without GdkPixbuf again
	* GtkIMHtml will refresh when you set a new GTK+ theme
	* Improved Yahoo! typing notification (thanks Brian Macke)
	* Prompt to authorize MSN buddies who added you while you
	  were offline (Thanks Jason Willis)
	* Option to globally disable Buddy Icon animation (Thanks
	  Luke Schierer)
	* Numerous bugfixes
	* Yahoo! will tell you when your buddies are playing Yahoo! 
 	  games and give you the ability to join them
	* Yahoo! can receive offline messages
	* IRC can do DCC chat.
	* IRC will convert HTML formatting to mIRC formatting.
	* Buddylist tab placement option (Thanks Jason Willis)
	* Protocol specific smiley faces